@@ -1,3 +1,10 @@
+2012-08-09  Corinna Vinschen  <vinschen@redhat.com>
+
+	* Makefile.am (libdelayimp.a): Only build and install if not creating
+	a w32api installation for Cygwin.
+	(libglut.a): Ditto.
+	* Makefile.in: Regenerate.
+
 2012-08-08  Kai Tietz  <ktietz@redhat.com>
 
 	* gdtoa/dg_qnan.h: Make Nan constants positive valued.
